# prime-nutra-wellness

./: .dockerignore  CNAME  Dockerfile  README.md  about.html  account.html  blog.html  checkout.html  contact.html  fly.toml  index.html  product.html  shop.html  track.html  wishlist.html
css/: styles.css
js/: api.js  app.js  products.js
server/: .dockerignore  .gitignore  main.py  pyproject.toml
server/app/: auth.py  config.py  database.py  emailer.py  main.py  models.py  schemas.py  seed.py  seed_data.json  utils.py
server/app/routers/: admin.py  auth.py  blog.py  categories.py  combos.py  customer.py  customer_auth.py  influencer.py  orders.py  payments.py  products.py  reports.py
server/app/static/admin/: admin.css  admin.js  index.html
