[project]
name = "prime-nutra-backend"
version = "1.0.0"
description = "PrimeNutra Wellness e-commerce backend + admin panel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.6",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "openpyxl>=3.1",
    "razorpay>=1.4",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
